erDiagram
    users {
        BIGINT id PK
        VARCHAR_255 email UK
        VARCHAR_255 password
        VARCHAR_255 name
        VARCHAR_255 avatar_path
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BOOLEAN is_deleted
    }

    roles {
        BIGINT id PK
        VARCHAR_255 name
        VARCHAR_255 description
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BOOLEAN is_deleted
    }

    user_roles {
        BIGINT user_id PK,FK
        BIGINT role_id PK,FK
    }

    books {
        VARCHAR_255 id PK
        VARCHAR_255 title
        TEXT description
        VARCHAR_255 authors
        VARCHAR_255 publisher
        DATE publication_date
        BIGINT price
        BIGINT page_count
        VARCHAR_255 isbn
        VARCHAR_255 image_path
        DECIMAL_3_2 average_rating
        BIGINT review_count
        DECIMAL_8_2 popularity
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BOOLEAN is_deleted
    }

    genres {
        BIGINT id PK
        VARCHAR_255 name
        VARCHAR_255 description
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BOOLEAN is_deleted
    }

    book_genres {
        VARCHAR_255 book_id PK,FK
        BIGINT genre_id PK,FK
    }

    book_chapters {
        VARCHAR_255 book_id PK,FK
        BIGINT chapter_number PK
        VARCHAR_255 title
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BOOLEAN is_deleted
    }

    book_chapter_page_contents {
        BIGINT id PK
        VARCHAR_255 book_id FK
        BIGINT chapter_number FK
        BIGINT page_number
        TEXT content
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BOOLEAN is_deleted
    }

    reviews {
        BIGINT id PK
        BIGINT user_id FK
        VARCHAR_255 book_id FK
        VARCHAR_1000 comment
        DECIMAL_2_1 rating
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BOOLEAN is_deleted
    }

    favorites {
        BIGINT id PK
        BIGINT user_id FK
        VARCHAR_255 book_id FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BOOLEAN is_deleted
    }

    bookmarks {
        BIGINT id PK
        BIGINT user_id FK
        BIGINT page_content_id FK
        VARCHAR_1000 note
        TIMESTAMP created_at
        TIMESTAMP updated_at
        BOOLEAN is_deleted
    }

    %% リレーションシップ定義
    users ||--o{ user_roles : "user_id"
    roles ||--o{ user_roles : "role_id"

    books ||--o{ book_genres : "book_id"
    genres ||--o{ book_genres : "genre_id"

    books ||--o{ book_chapters : "book_id"
    book_chapters ||--o{ book_chapter_page_contents : "book_id,chapter_number"

    users ||--o{ reviews : "user_id"
    books ||--o{ reviews : "book_id"

    users ||--o{ favorites : "user_id"
    books ||--o{ favorites : "book_id"

    users ||--o{ bookmarks : "user_id"
    book_chapter_page_contents ||--o{ bookmarks : "page_content_id"
  